tests/regression/error/hw4_error15.correct
operator '*' requires number * number, found number * none
